feat(base): add domain building block

--- a/src/RookieShop.Domain/RookieShop.Domain.csproj
+++ b/src/RookieShop.Domain/RookieShop.Domain.csproj
@@ -1,3 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<ItemGroup>
+		<PackageReference Include="MediatR" />
+		<PackageReference Include="StronglyTypedId" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Ardalis.SmartEnum" />
+		<PackageReference Include="Ardalis.GuardClauses" />
+		<PackageReference Include="Ardalis.Specification" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Update="SonarAnalyzer.CSharp">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
 </Project>
