--- a/src/RookieShop.IdentityService/RookieShop.IdentityService.csproj
+++ b/src/RookieShop.IdentityService/RookieShop.IdentityService.csproj
@@ -33,7 +33,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Exceptions\" />
+		<PackageReference Update="SonarAnalyzer.CSharp">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
