--- a/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
+++ b/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
@@ -4,4 +4,11 @@
 		<ProjectReference Include="..\RookieShop.Domain\RookieShop.Domain.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Update="SonarAnalyzer.CSharp">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
 </Project>
