--- a/src/RookieShop.Persistence/RookieShop.Persistence.csproj
+++ b/src/RookieShop.Persistence/RookieShop.Persistence.csproj
@@ -4,9 +4,13 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" />
-		<PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="EFCore.NamingConventions" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+		<PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -26,7 +30,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Constants\" />
+		<Folder Include="Constants\" />
 	</ItemGroup>
 
 </Project>
