--- a/src/RookieShop.ApiService/RookieShop.ApiService.csproj
+++ b/src/RookieShop.ApiService/RookieShop.ApiService.csproj
@@ -9,6 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http.Resilience" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ContainerEnvironmentVariable Include="ASPNETCORE_HTTPS_PORTS">
 			<Value>8081</Value>
 		</ContainerEnvironmentVariable>
