feat: add problem details and rate limiter

--- a/src/RookieShop.Application/RookieShop.Application.csproj
+++ b/src/RookieShop.Application/RookieShop.Application.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
+		<PackageReference Include="Ardalis.Result.AspNetCore" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\RookieShop.Persistence\RookieShop.Persistence.csproj" />
 	</ItemGroup>
 
