feat(o11y): add observability

--- a/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
+++ b/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
@@ -8,9 +8,23 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" />
+		<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.StackExchangeRedis" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.Http" />
+		<PackageReference Include="Npgsql.OpenTelemetry" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Polly" />
 		<PackageReference Include="Scrutor" />
 		<PackageReference Include="DistributedLock.Redis" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Swashbuckle.AspNetCore" />
 		<PackageReference Include="FluentValidation.AspNetCore" />
 		<PackageReference Include="MicroElements.Swashbuckle.FluentValidation" />
