--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -45,6 +45,8 @@
 		<PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.1" />
 		<PackageVersion Include="Npgsql.OpenTelemetry" Version="8.0.3" />
 		<PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1" />
+		<PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.8.0" />
+		<PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.8.1" />
 		<PackageVersion Include="OpenTelemetry.Instrumentation.StackExchangeRedis" Version="1.0.0-rc9.14" />
 		<PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.10" />
 		<!-- Xabaril -->
