--- a/src/RookieShop.Application/RookieShop.Application.csproj
+++ b/src/RookieShop.Application/RookieShop.Application.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
+		<PackageReference Include="Dapper" />
 		<PackageReference Include="Ardalis.Result.AspNetCore" />
 	</ItemGroup>
 
