--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -72,12 +72,14 @@
 		<PackageVersion Include="FluentAssertions" Version="6.12.0" />
 		<PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
 		<PackageVersion Include="AutoBogus.NSubstitute" Version="2.13.1" />
+		<!-- FluentEmail -->
+		<PackageVersion Include="FluentEmail.Razor" Version="3.0.2" />
+		<PackageVersion Include="FluentEmail.Mailtrap" Version="2.7.0" />
 		<!-- Miscellaneous -->
 		<PackageVersion Include="Polly" Version="8.3.1" />
 		<PackageVersion Include="Dapper" Version="2.1.35" />
 		<PackageVersion Include="Scrutor" Version="4.2.2" />
 		<PackageVersion Include="MediatR" Version="12.2.0" />
-		<PackageVersion Include="FluentEmail.Smtp" Version="3.0.2" />
 		<PackageVersion Include="Serilog.AspNetCore" Version="8.0.1" />
 		<PackageVersion Include="DistributedLock.Redis" Version="1.0.3" />
 		<PackageVersion Include="StronglyTypedId" Version="1.0.0-beta07" />
