--- a/tests/RookieShop.ArchTests/RookieShop.ArchTests.csproj
+++ b/tests/RookieShop.ArchTests/RookieShop.ArchTests.csproj
@@ -6,16 +6,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="coverlet.collector">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="coverlet.collector" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="xunit" />
-		<PackageReference Include="xunit.runner.visualstudio">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="xunit.runner.visualstudio" />
+		<PackageReference Include="NetArchTest.Rules" />
+		<PackageReference Include="FluentAssertions" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -32,6 +28,8 @@
 
 	<ItemGroup>
 		<Using Include="Xunit" />
+		<Using Include="FluentAssertions" />
+		<Using Include="NetArchTest.Rules" />
 	</ItemGroup>
 
 	<ItemGroup>
