--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -63,6 +63,7 @@
 		<!-- xUnit -->
 		<PackageVersion Include="xunit" Version="2.8.0" />
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.8.0" />
+		<PackageVersion Include="XunitContext" Version="3.3.2" />
 		<!-- TestContainers -->
 		<PackageVersion Include="Testcontainers" Version="$(TestcontainersVersion)" />
 		<PackageVersion Include="Testcontainers.Redis" Version="$(TestcontainersVersion)" />
