--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Custom .gitignore for Visual Studio and .NET projects
 
 mnt/
+keys/
 
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
