--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ x-default-logging: &logging
 
 services:
   rookie.db:
-    image: postgres:16.2-alpine3.19
+    image: ankane/pgvector:v0.5.1
     container_name: rookie.db
     restart: unless-stopped
     ports:
