--- a/ui/backoffice/package.json
+++ b/ui/backoffice/package.json
@@ -12,7 +12,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=4096 refine dev",
+    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=4096 refine dev --experimental-https",
     "build": "refine build",
     "start": "refine start",
     "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
@@ -35,13 +35,14 @@
     "@refinedev/simple-rest": "^5.0.6",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.19.33",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/parser": "5.48.0",
     "autoprefixer": "^10.4.19",
@@ -51,5 +52,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^4.9.5"
+  },
+  "refine": {
+    "projectId": "bGbZfh-fs5cBh-wjrQMw"
   }
 }
