--- a/src/RookieShop.Domain/RookieShop.Domain.csproj
+++ b/src/RookieShop.Domain/RookieShop.Domain.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Ardalis.SmartEnum" />
 		<PackageReference Include="Ardalis.GuardClauses" />
 		<PackageReference Include="Ardalis.Specification" />
+		<PackageReference Include="Ardalis.Result.AspNetCore" />
 	</ItemGroup>
 
 	<ItemGroup>
