--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -32,6 +32,7 @@
 		<PackageVersion Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="$(AspnetVersion)" />
 		<PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="$(AspnetVersion)" />
 		<PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="$(AspnetVersion)" />
+		<PackageVersion Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="$(AspnetVersion)" />
 		<PackageVersion Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="$(AspnetVersion)" />
 		<PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="$(MicrosoftExtensionsVersion)" />
 		<!-- Entity Framework Core -->
@@ -76,10 +77,10 @@
 		<PackageVersion Include="Testcontainers.Azurite" Version="$(TestcontainersVersion)" />
 		<PackageVersion Include="Testcontainers.PostgreSql" Version="$(TestcontainersVersion)" />
 		<!-- Testkits -->
+		<PackageVersion Include="AutoBogus.Moq" Version="2.13.1" />
 		<PackageVersion Include="ReportGenerator" Version="5.2.5" />
 		<PackageVersion Include="FluentAssertions" Version="6.12.0" />
 		<PackageVersion Include="NetArchTest.Rules" Version="1.3.2" />
-		<PackageVersion Include="AutoBogus.NSubstitute" Version="2.13.1" />
 		<!-- FluentEmail -->
 		<PackageVersion Include="FluentEmail.Razor" Version="3.0.2" />
 		<PackageVersion Include="FluentEmail.Mailtrap" Version="2.7.0" />
@@ -95,6 +96,7 @@
 		<PackageVersion Include="DistributedLock.Redis" Version="1.0.3" />
 		<PackageVersion Include="StronglyTypedId" Version="1.0.0-beta07" />
 		<PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageVersion Include="Refit.HttpClientFactory" Version="7.0.0" />
 		<PackageVersion Include="SonarAnalyzer.CSharp" Version="9.25.0.90414" />
 		<PackageVersion Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageVersion Include="Azure.Storage.Blobs" Version="12.20.0-beta.2" />
