--- a/tests/RookieShop.UnitTests/RookieShop.UnitTests.csproj
+++ b/tests/RookieShop.UnitTests/RookieShop.UnitTests.csproj
@@ -6,16 +6,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="coverlet.collector">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="coverlet.collector"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="xunit" />
-		<PackageReference Include="xunit.runner.visualstudio">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="xunit.runner.visualstudio"/>
+		<PackageReference Include="FluentAssertions" />
+		<PackageReference Include="ReportGenerator" />
 	</ItemGroup>
 
 	<ItemGroup>
